[gd_scene load_steps=8 format=2]

[ext_resource path="res://Azalea Font/Azalea-BF64f6fe9c7c4b6.otf" type="DynamicFontData" id=1]
[ext_resource path="res://main_screen.gd" type="Script" id=2]
[ext_resource path="res://sound_effects/doodle.mp3" type="AudioStream" id=3]

[sub_resource type="DynamicFont" id=1]
size = 84
outline_size = 2
outline_color = Color( 0.0313726, 0.776471, 0.443137, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 64
outline_size = 2
outline_color = Color( 0.0313726, 0.776471, 0.443137, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 96
outline_size = 5
outline_color = Color( 0.0313726, 0.776471, 0.443137, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 64
outline_size = 2
outline_color = Color( 0.0313726, 0.776471, 0.443137, 1 )
font_data = ExtResource( 1 )

[node name="main_screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -8.0
margin_bottom = -8.0
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ -146.0 ]
}

[node name="title1" type="Label" parent="."]
margin_left = 56.0
margin_top = 64.0
margin_right = 975.0
margin_bottom = 180.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "HACKERSPACE SIMULATOR!"

[node name="title2" type="Label" parent="."]
margin_left = 59.0
margin_top = 67.0
margin_right = 978.0
margin_bottom = 183.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "HACKERSPACE SIMULATOR!"

[node name="title3" type="Label" parent="."]
margin_left = 62.0
margin_top = 70.0
margin_right = 981.0
margin_bottom = 186.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "HACKERSPACE SIMULATOR!"

[node name="title4" type="Label" parent="."]
margin_left = 65.0
margin_top = 73.0
margin_right = 984.0
margin_bottom = 189.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "HACKERSPACE SIMULATOR!"

[node name="title5" type="Label" parent="."]
margin_left = 68.0
margin_top = 76.0
margin_right = 987.0
margin_bottom = 192.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "HACKERSPACE SIMULATOR!"

[node name="settings_button" type="Button" parent="."]
margin_left = 49.0
margin_top = 392.0
margin_right = 308.0
margin_bottom = 487.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "settings"
flat = true

[node name="play_button" type="Button" parent="."]
margin_left = 408.0
margin_top = 192.0
margin_right = 625.0
margin_bottom = 331.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
text = "PLAY!"
flat = true

[node name="credits" type="Button" parent="."]
margin_left = 720.0
margin_top = 400.0
margin_right = 966.0
margin_bottom = 495.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
text = "CREDITS"
flat = true

[node name="menu_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 12.0

[connection signal="button_down" from="settings_button" to="." method="_on_settings_button_button_down"]
[connection signal="button_down" from="play_button" to="." method="_on_play_button_button_down"]
[connection signal="button_down" from="credits" to="." method="_on_credits_button_down"]
